fix alignment in footer

--- a/css/style.css
+++ b/css/style.css
@@ -193,16 +193,15 @@ footer {
   padding-top: 15px;
 }
 
+.footer__margin p {
+  margin: 0;
+}
+
 .footer__nav a {
   color: inherit;
   text-decoration: none;
   line-height: 2.1;
   font-size: 1rem;
-  padding-top: 10px;
-}
-
-.footer__nav {
-  margin-top: 10px;
 }
 
 .footer__nav a:hover {
@@ -893,6 +892,7 @@ input[type="radio"] {
   /* footer */
   .footer__container {
     flex-direction: column;
+    gap: 20px;
   }
 
   .footer__copyright {
